Ensure that user's email matches institution at the time when a library card is created.